@@ -1,3 +1,6 @@
+2020/04/26
+• Minecraft is now an alarm rather than an action.
+• Actions renamed to responses.
 2020/04/25
 • Event functionality.
 2020/04/09
